--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
     height: 100%;
 }
 .container{
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.253);
     max-width: 1000px;
     width: 80%;
     min-width: 600px;
@@ -23,7 +23,7 @@
     font-family: 'Turret Road', cursive;
     display:grid;
     grid-template-columns: 2fr 1fr;
-    background-color: #000000;
+    background-color: rgba(0, 0, 0, 0.253);
 
 }
 .dashboard__idiot-lights{
